# pytorch-toolkit-dev

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
cfgs/: base-mobilenetv3_redution_large_100_miil_in21k_ft_in1k.yaml  base-regnety_redution_040.ra3_in1k-infer.yaml  base-regnety_redution_040.ra3_in1k.yaml  base.yaml  featextract-regnety_040.ra3_in1k.yaml  reid-mobilenetv4_conv_large.e500_r256_in1k.yaml  reid-mobilenetv4_hybrid_medium.e200_r256_in12k_ft_in1k.yaml  reid-regnety_040.ra3_in1k.yaml  reid-stepscheduler-regnety_040.ra3_in1k.yaml  reid-updates_by_iter-resnet50.tv2_in1k.yaml
cfgs/blacklist/: regnety_redution_040.ra3_in1k.yaml
cfgs/multilabel/: multilabel-regnety_040.ra3_in1k-infer.yaml  multilabel-regnety_040.ra3_in1k.yaml  multilabell-regnety_redution_040.ra3_in1k.yaml
cfgs/package_way_recognize/: base-regnety_040.ra3_in1k-infer.yaml  base-regnety_040.ra3_in1k.yaml
dataset/: simsun.ttc
dev/: linter.sh
docs/: INSTALL.md  ISSUE.md  STRUCTURE.md  environment.md  gitmoji.csv  requirements.txt  structure.md
docs/model-zoo/: generate_csv_results.py
local_lib/: __init__.py  custom_sampler.py
project/predictor4linux/: CMakeLists.txt  IClassifier.h  README.md  classifierCamera.cpp  classifierCamera.h  classifierFactory.cpp  classifierFactory.h  encryptor.cpp  encryptor.h  index.cpp  index.h  smart_predictor.cpp  smart_predictor.h  test.py  utils.h
results/: generate_csv_results.py
tools/: README.md  eval_feats.py  eval_sql.py  evaluate.py  feat_extract.py  infer_imgs.py  infer_recognising.py  infer_searching.py  train.py  validate.py
(+92 files in other folders)
